    <resources>
    <string name="app_name">Labs20212-Gr05</string>
    <string name="str_en">Inglés</string>
    <string name="str_es">Español</string>
    <string name="str_pt">Portugués</string>
    <string-array name="idiomas">
        <item>@string/str_en</item>
        <item>@string/str_es</item>
        <item>@string/str_pt</item>
    </string-array>
    <string name="personal_Information">Información personal</string>
    <string name="contact_Information">Información de contacto</string>
    <string name="first_name">Nombres: </string>
    <string name="last_name">Apellidos: </string>
    <string name="gender">Sexo: </string>
    <string name="female_gender">Mujer</string>
    <string name="male_gender">Hombre</string>
    <string name="birthdate">Fecha de cumpleaños: </string>
    <string name="scholarship">Grado de escolaridad: </string>
    <string name="phone">Teléfono: </string>
    <string name="address">Dirección: </string>
    <string name="email">Correo: </string>
    <string name="country">País: </string>
    <string name="city">Ciudad: </string>
    <string name="btn_change">Cambiar</string>
    <string name="btn_next">Siguiente</string>

    <string-array name="cities_array">
        <item>Bogotá</item>
        <item>Medellín</item>
        <item>Cali</item>
        <item>Barranquilla</item>
        <item>Cartagena de Indias</item>
        <item>Soacha</item>
        <item>Cúcuta</item>
        <item>Soledad</item>
        <item>Bucaramanga</item>
        <item>Bello</item>
        <item>Villavicencio</item>
        <item>Ibagué</item>
        <item>Santa Marta</item>
        <item>Valledupar</item>
        <item>Manizales</item>
        <item>Pereira</item>
        <item>Monteria</item>
        <item>Neiva</item>
        <item>Pasto</item>
        <item>Armenia</item>
    </string-array>

    <string-array name="countries_array">
        <item>Argentina</item>
        <item>Bolivia</item>
        <item>Brasil</item>
        <item>Chile</item>
        <item>Colombia</item>
        <item>Cuba</item>
        <item>Ecuador</item>
        <item>El Salvador</item>
        <item>Guatemala</item>
        <item>Haití</item>
        <item>Honduras</item>
        <item>México</item>
        <item>Nicaragua</item>
        <item>Panamá</item>
        <item>Paraguay</item>
        <item>Perú</item>
        <item>Republica Dominicana</item>
        <item>Uruguay</item>
        <item>Venezuela</item>
    </string-array>
            <string-array name="grades_array">
                <item>Primaria</item>
                <item>Secundaria</item>
                <item>Universitaria</item>
                <item>Otro</item>
            </string-array>

</resources>